<resources>
    <string name="app_name">Areo</string>
    <string name="label_checkout">CheckOut</string>
    <string name="signin">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="bio_label">Your Passion</string>
    <string name="name_label">Name</string>
    <string name="explore">EXPLORE NOW</string>
</resources>