<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_pinklight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfilActivity">

<ScrollView
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@drawable/bg_signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mregular"
            android:text="Edit Profile"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mlight"
            android:lineSpacingExtra="9dp"
            android:text="We highly suggest you to \nuse the correct informations"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_white"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">



            <LinearLayout
                android:layout_marginTop="120dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/name_label"
                    android:textColor="#8D8D8D"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/medium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackdark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/bio_label"
                    android:textColor="#8D8D8D"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/medium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackdark" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/username"
                    android:textColor="#8D8D8D"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/medium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackdark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/password"
                    android:textColor="#8D8D8D"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/medium"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackdark" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/email"
                    android:textColor="#8D8D8D"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/medium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/blackdark" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_profile_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/photo_edit_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="193dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/user_pic_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="152dp"
            android:layout_marginTop="95dp"
            android:background="@drawable/bg_btn_plus_blue"
            android:fontFamily="@font/medium"
            android:text="+"
            android:textColor="#FFF"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_btn1"
            android:fontFamily="@font/medium"
            android:text="SAVE PROFILE"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.596" />

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btn_continue"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_back" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>